objects/JBCXM__Alert__c.object
<CustomObject>
    <description>Alert Object is used to store all customer alerts posted.</description>
    <fields>
        <fullName>JBCXM__ASV__c</fullName>
        <description>Impact on Annual Subscription Value (ASV), if applicable, that is at stake with this alert. For example, if there is a &quot;Downsell alert&quot;, enter the potential reduction in ASV if the alert is not proactively addressed.</description>
        <inlineHelpText>Impact on Annual Subscription Value (ASV), if applicable, at stake with this alert. Example: for a &quot;Downsell alert&quot;, enter potential reduction in ASV if the alert is not proactively addressed.</inlineHelpText>
        <label>Alert ASV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <description>Select the customer against whom the Alert is issued. Master-Detail Relationship on Account Object.</description>
        <inlineHelpText>Select the customer against whom the Alert is issued.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectDisplayValue__c</fullName>
        <inlineHelpText>Associated Object Display Value</inlineHelpText>
        <label>Associated Object Display Value</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectRecordID__c</fullName>
        <inlineHelpText>Associated Object Record ID</inlineHelpText>
        <label>Associated Object Record ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectRecordValue__c</fullName>
        <inlineHelpText>Associated Object Value</inlineHelpText>
        <label>Associated Object Record Value</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Comment__c</fullName>
        <description>Enter commentary or background on the alert - max length allowed 4096 characters.</description>
        <inlineHelpText>Enter commentary or background on the alert - max length allowed 4096 characters.</inlineHelpText>
        <label>Comment</label>
        <length>32760</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Date__c</fullName>
        <description>Select the date on which Alert is issued.</description>
        <inlineHelpText>Select the date on which Alert is issued.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__LinkedToNPS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Alert is associated to the NPS response from the customer that the alert is linked to.</description>
        <inlineHelpText>Checked if the Alert is associated to the NPS response from the customer that the alert is linked to.</inlineHelpText>
        <label>Linked to NPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__LinkedToUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Alert is associated to the Usage Adoption trend of the customer that the alert is linked to.</description>
        <inlineHelpText>Checked if the Alert is associated to the Usage Adoption trend of the customer that the alert is linked to.</inlineHelpText>
        <label>Linked to Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__MRR__c</fullName>
        <description>MRR Value is auto calculated based on the Alert value entered in the ASV field. MRR = ASV/12</description>
        <inlineHelpText>MRR Value is auto calculated based on the Alert value entered in the ASV field.</inlineHelpText>
        <label>Alert MRR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__NextStepComment__c</fullName>
        <description>Enter details of the remedial actions proposed or under taken to address the Alert - max allowed length 4096 characters.</description>
        <inlineHelpText>Enter details of the remedial actions proposed or under taken to address the Alert - max allowed length 4096 characters.</inlineHelpText>
        <label>Next Step Comment</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__NextStepDate__c</fullName>
        <description>Enter the date on which the last remedial action was taken or proposed to be taken.</description>
        <inlineHelpText>Enter the date on which the last remedial action was taken or proposed to be taken.</inlineHelpText>
        <label>Next Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__NextStepOwner__c</fullName>
        <description>Enter the name of the person responsible for the remedial actions.</description>
        <inlineHelpText>Enter the name of the person responsible for the remedial actions.</inlineHelpText>
        <label>Next Step Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the reason that resulted in this Alert. The list of reasons is customizable for your organization.</description>
        <inlineHelpText>Select the reason that resulted in this Alert. The list of reasons is customizable for your organization.</inlineHelpText>
        <label>Reason</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Alerts (Reason)</relationshipLabel>
        <relationshipName>AlertsPicklistReason</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Severity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Alert Severity (or &quot;Alert Probability&quot;) indicates the probability of occurence of the Alert event. The list is customizable, if needed, by adding records to picklist object.</description>
        <inlineHelpText>Alert Severity (or &quot;Alert Probability&quot;) indicates the probability of occurence of the Alert event.</inlineHelpText>
        <label>Severity</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>AlertsPicklistSeverity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Alert Status is defaulted to &quot;Active&quot;. When no further actions are required on the Alert, change the status to &quot;Closed&quot;.</description>
        <inlineHelpText>Alert Status is defaulted to &quot;Active&quot;. When no further actions are required on the Alert, change the status to &quot;Closed&quot;.</inlineHelpText>
        <label>Status</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Alerts (Status)</relationshipLabel>
        <relationshipName>AlertsPicklistStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the type of Alert being issued. 3 alert types are supported - Customer Concern, Downsell and Churn.</description>
        <inlineHelpText>Select the type of Alert being issued. 3 alert types are supported - Customer Concern, Downsell and Churn.</inlineHelpText>
        <label>Type</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Alerts (Type)</relationshipLabel>
        <relationshipName>AlertsPicklistType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__UniqueID__c</fullName>
        <description>This field Uniquely Identifies an alert can be used as an ExternalID</description>
        <displayFormat>AL-{0}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>This field Uniquely Identifies an alert can be used as an ExternalID</inlineHelpText>
        <label>Unique ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Alert</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__Account__c</columns>
        <columns>JBCXM__AssociatedObjectDisplayValue__c</columns>
        <columns>JBCXM__AssociatedObjectRecordID__c</columns>
        <columns>JBCXM__AssociatedObjectRecordValue__c</columns>
        <columns>JBCXM__ASV__c</columns>
        <columns>JBCXM__Comment__c</columns>
        <columns>JBCXM__Date__c</columns>
        <columns>JBCXM__LinkedToNPS__c</columns>
        <columns>JBCXM__LinkedToUsage__c</columns>
        <columns>JBCXM__Reason__c</columns>
        <columns>JBCXM__Severity__c</columns>
        <columns>JBCXM__Status__c</columns>
        <columns>JBCXM__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>